<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/reg_main_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:backgroundTint="@color/backgroundShadow"
        android:backgroundTintMode="multiply"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <com.example.dudco.ovs_seoulappcompetition.Views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:font="somatic-rounded.otf"
            android:text="@string/oh_visit_seoul"
            android:gravity="center"
            android:textSize="35sp"
            android:id="@+id/customTextView"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_textinput_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errr_appearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:theme="@style/LoginTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_textinput_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errr_appearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:theme="@style/LoginTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_textinput_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errr_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_edit_repass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:theme="@style/LoginTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_textinput_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errr_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:theme="@style/LoginTheme"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/register"
            android:textColor="@color/white"
            android:enabled="false"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.dudco.ovs_seoulappcompetition.Views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="기존 계정이 있으십니까?"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="17sp"
                android:id="@+id/customTextView3"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/reg_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_btn_shape"
                android:text="로그인"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
