<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    tools:context="Auth.LoginActivity"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/backgroundShadow"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center">


        <LinearLayout
            android:id="@+id/container_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_title"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/texttitle_form"
                android:layout_below="@id/image_title"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="25dp">

                <com.example.dudco.ovs_seoulappcompetition.Views.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oh_visit_seoul"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="#fff"
                    app:font="somatic-rounded.otf"/>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="0.7dp"
                    android:background="@color/white"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="17dp">
                </LinearLayout>

                <com.example.dudco.ovs_seoulappcompetition.Views.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="서울의 아름다움을 찾아라!"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:font="nanumbarungothic_0.ttf"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/container_title"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="45dp"
            android:visibility="gone">
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:paddingStart="8dp"
                android:paddingBottom="15dp"/>

            <EditText
                android:id="@+id/edit_pass"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingBottom="15dp"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_shape"
                android:text="@string/login"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/oauth_form"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_form"
            android:layout_marginBottom="50dp"
            android:weightSum="5"
            android:visibility="gone">
            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/image_facebook"
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_facebook"
                android:padding="8dp"/>

            <ImageView
                android:id="@+id/image_twiter"
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_twiter"
                android:padding="8dp"/>

            <ImageView
                android:id="@+id/image_google"
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_google"
                android:padding="8dp"/>

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/etc_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/oauth_form"
            android:gravity="center"
            android:weightSum="2"
            android:visibility="gone">
            <com.example.dudco.ovs_seoulappcompetition.Views.CustomTextView
                android:id="@+id/findpass"
                android:textSize="18sp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/findpass"
                app:font="nanumbarungothic_0.ttf"/>
            <com.example.dudco.ovs_seoulappcompetition.Views.CustomTextView
                android:id="@+id/register"
                android:textSize="18sp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/auth"
                app:font="nanumbarungothic_0.ttf"/>
        </LinearLayout>

</RelativeLayout>
